--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
 			<artifactId>spring-mock-mvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>br.com.gabriel.conversor</groupId>
+			<artifactId>conversor-dto</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/artefatos/ConversorDTO.jar</systemPath>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
